--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="config-panel.js"></script>
         <link rel="stylesheet" type="text/css" href="style.css">
         <link rel="stylesheet" type="text/css" href="window.css">
+        <link rel="icon"  href="images/favicon.ico"  type="image/x-ico" />
     </head>
     <body>
         <!-- <script src="https://blog-static.cnblogs.com/files/zouwangblog/mouse-click.js"></script>
