--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
         <title id="ohp-title">- 自   产   自   销 -</title>
         <script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
         <script type="text/javascript" src="script.js?v=20200812"></script>
-        <script type="text/javascript" src="window-control.js?v=20200812"></script>
+        <script type="text/javascript" src="window-control.js?v=20200812-1"></script>
         <script type="text/javascript" src="custom-websites.js"></script>
         <script type="text/javascript" src="config-panel.js"></script>
-        <link rel="stylesheet" type="text/css" href="style.css?v=20200812">
-        <link rel="stylesheet" type="text/css" href="window.css?v=20200812">
+        <link rel="stylesheet" type="text/css" href="style.css?v=20200812-1">
+        <link rel="stylesheet" type="text/css" href="window.css?v=20200812-1">
         <link rel="icon"  href="images/favicon.ico"  type="image/x-ico" />
     </head>
     <body>
