--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@
     <div class="edit-website-panel panel" id="add-website-window">
         <h3 class="window-title" style="color: aliceblue;">编辑网页<button class=" button-class close" onclick="closeWindow('#add-website-window')"></button></h3>
         <div class="button-div" style="text-align:center;vertical-align:middel;">
-            <input id="input-custom-sitename" class="edit-input" placeholder="常用网站"><br>
-            <input id="input-custom-website" class="edit-input" placeholder="请输入网址"><br>
+            <input id="input-custom-sitename" class="edit-input" autocomplete="off" placeholder="常用网站"><br>
+            <input id="input-custom-website" class="edit-input" autocomplete="off" placeholder="请输入网址"><br>
             <button class="edit-submit square-button-class" onclick="submitWebsite()">添加</button>
         </div>
     </div>
